--- a/formatting.css
+++ b/formatting.css
@@ -8,8 +8,27 @@
     "wdth" 100;
 }
 
+img {
+    display: block;
+    height: 40px;
+    width: 40px;
+    animation: cursormove 1s;
+    animation-timing-function: steps(10, end);
+}
+
+@keyframes cursormove {
+  0% {
+     	transform: translate(40%, 20%);
+  }
+  100% {
+      transform: translateX(0%, 0%);
+  }
+}
+
+
+
 body {
-    background-color: lightyellow; 
+    background-image: url(Text.png);
     font-family: 'Roboto', sans-serif;
 }
 
@@ -17,14 +36,48 @@ body {
   background-color: white;
   background-clip: content-box, padding-box, border-box;
     float: inherit;
-    box-shadow: 0 -8px 0 29px white;
-    margin-right: 26px;
+    box-shadow: 0 -6px 0 29px white;
+    margin-right: 30px;
         margin-left: 5px;
+    
+
     
 }
 
+h3{
+    text-align: right;
+ }
+
+.button{
+  background-color: blue;
+  border: none;
+  color: white;
+  padding: 8px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 30px;
+    margin-bottom: 1px;
+  cursor: pointer;  
+    border-radius: 10px;
+    text-decoration: underline;
+}
+
+.button2
+{
+  font-family: 'Roboto';  
+  color: darkgray;
+  text-align: left;
+  text-decoration:inherit;
+  display: inline-block;
+    font-size: 15px;
+    text-decoration: underline;
+}
+
+
 .new_message {
-    font-family: sans-serif;
+    font-family: 'Roboto';
     font-size: 14px;
     color: darkgray;
     background-clip: border-box;
@@ -32,11 +85,25 @@ body {
     padding-top: 10px;
     padding-right: 10px;
     padding-bottom: 10px;
-    padding-left: 25px;
+    padding-left: 32px;
      margin-top: 0px;
   margin-bottom: 0px;
   margin-right: -2px;
   margin-left: -25px;
+}
+
+h2 {
+   background-color: #f2f6fd; 
+    padding-top: 5px;
+    padding-right: 10px;
+    padding-bottom: 0px;
+    padding-left: 32px;
+     margin-top: 0px;
+  margin-bottom: 0px;
+  margin-right: px;
+  margin-left: -25px;
+    font-size: 15px;
+    
 }
     
 
@@ -45,21 +112,25 @@ h1 {
     font-size: 15px;
     color:lightgray;
     background-color: white;
+    
 }
 
 .subject
 {
+    font-family: 'Roboto';
     border-bottom-style: solid;
     border-width: 1px;
     padding-bottom: 9px;
     border-bottom-color: lightgray;
     box-shadow: 0 20px 0 29px white;
-    margin-right: 26px;
+    margin-right: 30px;
         margin-left: 5px
+            
 }
 
 body {border-style: solid;}
 body {border-color: #f2f6fd;}
+body {border-radius: 5px;}
 
 body  
 {
@@ -71,18 +142,20 @@ body
     margin-bottom: 30px;
     margin-right: 50px;
     margin-left: 50px;
-    animation: move 0.5s linear;
-  rposition: relative;
+    animation: move 4s;
+    animation-timing-function: steps(40, end);
   height: fit-content;
 }   
 
 @keyframes move {
   0% {
+     	transform: translate(00%, 400%);
+  }
     
-     	transform: translate(80%, 80%);
+    50% {
+     	transform: translate(00%, 400%);
   }
   100% {
-    
       transform: translateX(0%, 0%);
   }
 }
